--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/andrewazores/loggerserver#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "winston": "^3.10.0"
   }
